# blueretro-homeassistant

./: CHANGELOG.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: validate.yml
blueretro_ble/: __init__.py  const.py  device.py  discovery.py  gameid.py  models.py  parser.py
custom_components/blueretro/: __init__.py  _firmware.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  select.py  sensor.py  services.py  services.yaml  strings.json  update.py
custom_components/blueretro/translations/: en.json  es.json  pt-BR.json  pt.json
docs/superpowers/plans/: 2026-05-25-blueretro-homeassistant.md
docs/superpowers/specs/: 2026-05-25-blueretro-homeassistant-design.md
tests/integration/: conftest.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_firmware.py  test_init.py  test_manifest.py  test_select.py  test_sensor.py  test_services.py  test_update.py
tests/lib/: test_const.py  test_device_commands.py  test_device_update.py  test_discovery.py  test_gameid.py  test_models.py  test_parser.py  test_public_api.py  test_smoke.py
