[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# This repo is a Home Assistant HACS custom integration (custom_components/blueretro),
# not a Python package. The BLE library lives in its own repo and on PyPI as
# `blueretro-ble` (https://github.com/hudsonbrendon/blueretro-ble); the integration
# depends on it via manifest.json `requirements`. This pyproject exists only to
# configure pytest and the dev/test toolchain.
[project]
name = "blueretro-homeassistant"
version = "0.1.0"
description = "Home Assistant integration for the BlueRetro retro-console Bluetooth adapter"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Hudson Brendon", email = "contato.hudsonbrendon@gmail.com" }]

[project.optional-dependencies]
test = [
    "blueretro-ble==0.2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13",
    # Pulled in transitively by Home Assistant's bluetooth stack on Linux, but
    # required explicitly to run the HA bluetooth integration under tests on macOS.
    "pyserial>=3.5",
    "dbus-fast>=2.0",
]

# No Python package is shipped from this repo.
[tool.setuptools]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
